@@ -180,7 +180,6 @@ class RepositoryTests(TestCase):
 
     def test_set_description(self):
         r = self._repo = open_repo('a.git')
-        f = open(os.path.join(r.path, 'description'), 'w')
         description = "Some description"
         r.set_description(description)
         self.assertEquals(description, r.get_description())
